# video-markup

./: .gitignore  docker-compose.yml  index.html  script.js
back/: Docker.dockerfile  main.py  pyproject.toml
back/api/: handlers.py  html.py
back/api/contracts/: requests.py  responses.py
back/app/: entries.py
back/app/repo/: records.py
back/app/services/: periods_processor.py  record_create.py  uploader.py
back/app/services/records/: create.py  deleter.py  getter.py  listing.py
back/app/services/records/periods/: processor.py
back/core/: __init__.py  config.py  mongo.py
configs/: Docker.nginx.dockerfile  run.sh
configs/nginx/: nginx.conf
front/: README.md  index.html  result.json  script.js
front/sass/: style.css  style.css.map  style.sass
front/sass/abstracts/: _variables.sass
front/sass/base/: _base.sass  _media-query.sass  _utilites.sass
front/sass/elements/: _add-record-form.sass  _arrows.sass  _data-legend.sass  _data-section.sass  _mood-columns.sass  _progress-bar.sass  _records-list-section.sass  _return-icon.sass  _video-player.sass  _video-slider-checkBox.sass
front/sass/layout/: _grid.sass
front/scripts/: api.js  elements-clearing.js  events-handlers.js  global-data.js  main-page.js  main.js  page-rendering.js  utils.js  video-handlers.js
front/templates/: main-page.html  video-page.html
sass/: style.css  style.css.map  style.sass
sass/abstracts/: _variables.sass
sass/base/: _base.sass  _utilites.sass
sass/elements/: _video-player.sass
