[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "3.9.10"
fastapi = "0.87.0"
uvicorn = "0.20.0"
python-multipart = "0.0.5"
pandas = "1.5.2"
aiofiles = "22.1.0"
motor = "3.1.1"
jinja2 = "3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
